--- a/package.json
+++ b/package.json
@@ -10,14 +10,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@supabase/supabase-js": "^2.48.1",
     "expo": "~52.0.37",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-redash": "^18.1.3",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.8.0",
+    "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
   "private": true
